<resources>
    <string name="app_name">Izat Afghan</string>
    <string name="exceptionInErrorResponse">Exception in parsing error response.</string>
    <string name="timeout">Request timed out</string>
    <string name="connectException">Unable to connect host</string>
    <string name="invalid_data">Invalid data receied.</string>
    <string name="ssl">SSL cetificate error. Unable to handshake</string>
    <string name="text_somethingwentwrong">Something went wrong. Please try again</string>
    <string name="pleaseWait">Please wait …</string>
    <string name="no_internet">No internet Connection.</string>
    <string name="key">lakjfalsjfiosdjl fowi 029u4893rji9pq3fw</string>
    <string name="salt">sd;lfja094rjmo3wf90iewdf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_succeeded">dot</string>
    <string name="result_failed">Failed</string>
    <string name="result_failed_why">Please try again</string>
    <string name="ok_button">OK</string>
    <string name="action_settings">s</string>
    <string name="home">Home</string>
    <string name="retail">Retail</string>
    <string name="crm">CRM</string>
    <string name="lead">Lead</string>
    <string name="territory">Territory</string>
    <string name="opportunity">Opportunity</string>
    <string name="customer_group">Customer Group</string>
    <string name="customer">Customer</string>
    <string name="lead_source">Lead Source</string>
    <string name="communication">Communication</string>
    <string name="contact">Contact</string>
    <string name="sales_person">Sales Person</string>
    <string name="new_lead">New Lead</string>
    <string name="lead_org">Lead is an Organization</string>
    <string name="person_name">Person Name</string>
    <string name="email_address">Email Address</string>
    <string name="lead_owner">Lead Owner</string>
    <string name="status">Status</string>
    <string name="salutation">Salutation</string>
    <string name="designation">Designation</string>
    <string name="gender">Gender</string>
    <string name="source">Source</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="follow_up">Follow Up</string>
    <string name="next_contact_by">Next Contact By</string>
    <string name="next_contact_date">Next Contact Date</string>
    <string name="ends_on">Ends On</string>
    <string name="notes">Notes</string>
    <string name="address_and_contact">Address and Contact</string>
    <string name="address_type">Address Type</string>
    <string name="address_title">Address Title</string>
    <string name="address_line">Address Line</string>
    <string name="city_town">City or Town</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone">Phone</string>
    <string name="mobile_no">Mobile No</string>
    <string name="fax">Fax</string>
    <string name="website">Website</string>
    <string name="more_information">More Information</string>
    <string name="lead_type">Lead Type</string>
    <string name="market_segment">Market Segment</string>
    <string name="industry">Industry</string>
    <string name="request_type">Request Type</string>
    <string name="company">Company</string>
    <string name="print_language">Print Language</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="blog_subscriber">Blog Subscriber</string>
    <string name="organization_name">Organization Name</string>
    <string name="save">Save</string>
    <string name="save_record">Save Record</string>
    <string name="add_territory_targets">Add Territory Targets</string>
    <string name="target_qty">Target Qty</string>
    <string name="target_amount">Target Amount</string>
    <string name="target_distribution">Target Distribution</string>
    <string name="add">Add</string>
    <string name="new_territory">New Territory</string>
    <string name="territory_name">Territory Name</string>
    <string name="parent_territory">Parent Territory</string>
    <string name="territory_manager">Territory Manager</string>
    <string name="for_reference">For Reference</string>
    <string name="items">Items</string>
    <string name="item_group">Item Group</string>
    <string name="fiscal_year">Fiscal Year</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="distribution">Distribution</string>
    <string name="new_opportunity">New Opportunity</string>
    <string name="opportunity_from">Opportunity From</string>
    <string name="cutomer">Cutomer</string>
    <string name="opportunity_type">Opportunity Type</string>
    <string name="converted_by">Converted By</string>
    <string name="sales_stage">Sales Stage</string>
    <string name="expected_closing_date">Expected Closing Date</string>
    <string name="sales">Sales</string>
    <string name="currency">Currency</string>
    <string name="probability">Probability (%)</string>
    <string name="opportunity_amount">Opportunity Amount</string>
    <string name="add_credit_limit">Add Credit Limit</string>
    <string name="izat_afghan_limited">Izat Afghan Limited</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="bypass">Bypass</string>
    <string name="new_customer_group">New Customer Group</string>
    <string name="customer_group_name">Customer Group Name</string>
    <string name="parent_customer_group">Parent Customer Group</string>
    <string name="default_price_list">Default Price List</string>
    <string name="default_payment_terms_template">Default Payment Terms Template</string>
    <string name="is_group">is Group</string>
    <string name="only_leaf_nodes_are_allowed_in_transaction">Only leaf nodes are allowed in transaction</string>
    <string name="credit_limits">Credit Limits</string>
    <string name="remove_all">Remove All</string>
    <string name="new_customer">New Customer</string>
    <string name="full_name">Full Name</string>
    <string name="type">Type</string>
    <string name="email_id">Email id</string>
    <string name="mobile">Mobile</string>
    <string name="new_lead_source">New Lead Source</string>
    <string name="source_name">Source Name</string>
    <string name="cancel">Cancel</string>
    <string name="new_email">New Email</string>
    <string name="assign_to_me">Assign to me</string>
    <string name="to">To</string>
    <string name="cc">CC</string>
    <string name="bcc">BCC</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_me_a_copy">Send me a copy</string>
    <string name="send_read_receipt">Send Read Receipt</string>
    <string name="send">Send</string>
    <string name="contacts">Contacts</string>
    <string name="add_reference">Add Reference</string>
    <string name="link_document_type">Link Document Type</string>
    <string name="link_name">Link Name</string>
    <string name="link_title">Link Title</string>
    <string name="new_contact">New Contact</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_id">User Id</string>
    <string name="address">Address</string>
    <string name="company_name">Company Name</string>
    <string name="contact_details">Contact Details</string>
    <string name="is_primary">Is Primary</string>
    <string name="contact_numbers">Contact Numbers</string>
    <string name="number">Number</string>
    <string name="reference">Reference</string>
    <string name="add_email">Add Email</string>
    <string name="email">Email</string>
    <string name="add_contact_no">Add Contact No</string>
    <string name="new_sales_person">New Sales Person</string>
    <string name="sales_person_name">Sales Person Name</string>
    <string name="parent_sales_person">Parent Sales Person</string>
    <string name="commission_rate">Commission Rate</string>
    <string name="employee">Employee</string>
    <string name="department">Department</string>
    <string name="sales_person_targets">Sales Person Targets</string>
    <string name="your_shortcuts">Your Shortcuts</string>
    <string name="masters">Masters</string>
    <string name="select_opening_entry">Select Opening Entry</string>
    <string name="point_of_sale">Point Of Sale</string>
    <string name="name">name</string>
    <string name="nname">Name</string>
    <string name="all_items">All Items</string>
    <string name="items_cart">Items Cart</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="additional_discount">Additional Discount %</string>
    <string name="net_total">Net Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="checkout">Checkout</string>
    <string name="search_by_customer_name_phone_email">Search by customer name, phone, email</string>
    <string name="search_by_customer_name">Search by customer name</string>
    <string name="select_item_group">Select item group</string>
    <string name="search_by_item_code_serial_number_bar">Search by item code, serial number, bar</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="date">Date</string>
    <string name="actual_price">Actual Price</string>
    <string name="after_discount">After Discount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="change">Change</string>
    <string name="complete_order">Complete Order</string>
    <string name="note_in_receipt">Do you want to add any note in Receipt?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="write_note">Write note</string>
    <string name="note">Note</string>
    <string name="receipt">Receipt</string>
    <string name="totals">Totals</string>
    <string name="change_amount">Change amount</string>
    <string name="outstanding_amount">Outstanding amount</string>
    <string name="discount">Discount</string>
    <string name="payments">Payments</string>
    <string name="print">Print</string>
    <string name="ok">OK</string>
    <string name="update_task">"Do you want to update your task also ?"</string>
    <string name="new_pos_profile">New POS Profile</string>
    <string name="new_loyalty_program">New Loyalty Program</string>
    <string name="program_details">Program Details</string>
    <string name="loyalty_program_name">Loyalty Program Name</string>
    <string name="name_should_be_unique">Name should be unique</string>
    <string name="loyalty_program_type">Loyalty Program Type</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="customer_territory">Customer Territory</string>
    <string name="collection_tier">Collection Tier</string>
    <string name="invoice">Invoice</string>
    <string name="collection_factor_1_lp">Collection Factor (=1 LP)</string>
    <string name="redemption">Redemption</string>
    <string name="file_name">File name</string>
    <string name="upload">Upload</string>
    <string name="generate_report">Generate Report</string>
    <string name="from">From</string>
    <string name="warehouse">Warehouse</string>
    <string name="generate">Generate</string>
    <string name="get_items_from_warehouse">Get Items from Warehouse</string>
    <string name="show_history">Show History</string>
    <string name="update_your_status">Update your Status</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="shop_closed">Shop Closed</string>
    <string name="no_purchase">No Purchase</string>
    <string name="add_note">Add Note</string>
</resources>