<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/round_bg"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/generate_report"
            android:textColor="@color/primary"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:id="@+id/edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/newGrey" />

            <TextView
                android:id="@+id/from_date_edit"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/field_label"
                android:layout_marginTop="@dimen/_3sdp"
                android:completionThreshold="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/to"
                android:textColor="@color/newGrey" />

            <TextView
                android:id="@+id/to_date_edit"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/from_date_edit"
                android:layout_marginTop="@dimen/_3sdp"
                android:completionThreshold="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:textColor="@color/newGrey" />

                <ImageView
                    android:id="@+id/search_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_search_24"
                    app:tint="@color/primary" />
            </RelativeLayout>

            <AutoCompleteTextView
                android:id="@+id/item_edit"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/from_date_edit"
                android:layout_marginTop="@dimen/_3sdp"
                android:completionThreshold="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/warehouse"
                android:textColor="@color/newGrey" />

            <AutoCompleteTextView
                android:id="@+id/warehouse_edit"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/from_date_edit"
                android:layout_marginTop="@dimen/_3sdp"
                android:completionThreshold="0" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_toLeftOf="@+id/add"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/generate" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>